# smartapp-sensortrack

./: .coveragerc  .mypy.ini  .pre-commit-config.yaml  .pylintrc  Changelog  DEVELOPER.md  NOTICE  PyPI.md  README.md  SECURITY.md  TODO.md  docker-compose.yml  pyproject.toml  pytest.ini  run
.github/workflows/: test-suite.yml  tox.yml
.run/tasks/: build.sh  database.sh  release.sh  server.sh  suite.sh
config/installed/: README.md
config/installed/sensortrack/: README.md
config/installed/sensortrack/server/: README.md  application.yaml  logging.yaml  server.env
config/installed/systemd/: README.md
config/installed/systemd/user/: sensortrack.service
config/local/: README.md
config/local/grafana/: README.md
config/local/grafana/dashboards/: sensortrack.json
config/local/grafana/datasources/: datasource.yml
config/local/sensortrack/server/: README.md  application.yaml  logging.yaml  server.env
docs/: conf.py  index.rst  requirements.txt
src/sensortrack/: config.py  dispatcher.py  handler.py  lifecycle.py  rest.py  server.py  smartthings.py  weather.py
src/sensortrack/data/: definition.yaml  dispatcher.yaml
src/sensortrack/lifecycle/: __init__.py  common.py  configuration.py  confirmation.py  converter.py  event.py  install.py  interface.py  oauth.py  uninstall.py  update.py
src/sensortrack/lifecycle/interface/: __init__.py  configuration.py  confirmation.py  event.py  install.py  installedapp.py  lifecycle.py  oauth.py  uninstall.py  update.py
src/sensortrack/smartapp/: converter.py  dispatcher.py  interface.py
src/smartapp/: converter.py  dispatcher.py  interface.py  signature.py
tests/: test_dispatcher.py  test_handler.py  test_rest.py  test_server.py  test_smartthings.py  test_weather.py  testutil.py
tests/fixtures/weather/: observations.json
tests/fixtures/weather/observations/: invalid.json  missing.json  null.json
tests/fixtures/weather/stations/: stations.json
tests/lifecycle/: test_converter.py
tests/lifecycle/fixtures/test_converter/request/: 0.README.md  CONFIGURATION-PAGE.json  CONFIRMATION.json  EVENT-DEVICE.json  EVENT-TIMER.json  INSTALL.json  OAUTH_CALLBACK.json  UNINSTALL.json
tests/lifecycle/fixtures/test_converter/response/: CONFIGURATION-PAGE-only.json  CONFIRMATION.json  OAUTH_CALLBACK.json
tests/lifecycle/fixtures/test_converter/settings/: BOOLEAN.json  EMAIL.json  ENUM-GROUP.json  ICON.json  LINK.json  NUMBER.json  OAUTH.json  PAGE.json  PARAGRAPH.json
tests/sensortrack/: test_config.py  test_dispatcher.py  test_handler.py  test_rest.py  test_server.py  test_smartthings.py  test_weather.py
tests/sensortrack/fixtures/config/: application.yaml
tests/sensortrack/fixtures/smartthings/: location.json
tests/smartapp/: test_converter.py  test_dispatcher.py  test_interface.py  test_signature.py
tests/smartapp/fixtures/samples/: README.md
tests/smartapp/fixtures/samples/request/: EVENT-DEVICE.json  EVENT-TIMER.json  INSTALL.json  UPDATE.json
tests/smartapp/fixtures/samples/settings/: DECIMAL.json  TEXT.json  TIME.json
tests/smartapp/fixtures/test_converter/: README.md
tests/smartapp/fixtures/test_converter/request/: CONFIGURATION-INITIALIZE.json  EVENT-DEVICE.json  EVENT-TIMER.json  UNINSTALL.json
tests/smartapp/fixtures/test_converter/response/: CONFIGURATION-INITIALIZE.json  CONFIGURATION-PAGE-1of2.json
tests/smartapp/fixtures/test_converter/settings/: DEVICE.json  ENUM.json  IMAGE.json  PHONE.json
utils/: tools.ps1
